# rs-mvc-example

./: Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs  routes.rs
src/app/controllers/: mod.rs  user_controller.rs
src/app/helpers/: mod.rs  user_helper.rs
src/app/models/: mod.rs  user.rs
